5-Ingress/deployService1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-base-deploy
  labels:
    app: ms-base
spec:
  selector:
    matchLabels:
      app: ms-base
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ms-base
    spec:
      containers:
        - name: ms-base
          image: acjimeneza/ms-base:1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"

---

apiVersion: v1
kind: Service
metadata:
  name: base-service
  labels:
    app: ms-base
spec:
  type: ClusterIP
  selector:
    app: ms-base
  ports:
    - protocol: TCP
      name: http
      port: 8000
      targetPort: 5000
