5-Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: base-service
              port:
                number: 8000
        - path: /servicio2/
          pathType: Prefix
          backend:
            service:
              name: base-service-2
              port:
                number: 5678
        - path: /servicio3/
          pathType: Prefix
          backend:
            service:
              name: base-service-3
              port:
                number: 5678
